# learn-rust

auth-rust/: .gitignore  Cargo.toml
auth-rust/src/: cache.rs  database.rs  server.rs
auth-rust/src/models/: user.rs
auth-rust/src/tests/: helpers.rs
bench_example/: Cargo.toml
bench_example/src/: lib.rs
criterion_demo/: Cargo.toml
criterion_demo/.criterion/Fibonacci 8/base/: estimates.json  sample.json  tukey.json
criterion_demo/.criterion/Fibonacci 8/change/: estimates.json
criterion_demo/.criterion/Fibonacci 8/new/: estimates.json  sample.json  tukey.json
criterion_demo/benches/: fibonacci.rs
criterion_demo/src/: lib.rs
integration_test/: Cargo.toml
integration_test/src/: lib.rs
integration_test/tests/: common.rs  openid.plantuml  sum.rs
logic_gates/: Cargo.toml
logic_gates/src/: generic_structs.rs  lib.rs
logic_gates/tests/: half_adder.rs
rest_api/: Cargo.toml
rest_api/src/: main.rs
rest_api/src/user/: model.rs  routes.rs
rust-presentation/: Rust_lang.md  borrow_rules.txt  run.bat
super_player/: Cargo.toml
super_player/src/: impl_trait_closure.rs  impl_trait_syntax.rs  main.rs  media.rs  trait_bound_functions.rs  trait_bound_intro.rs  trait_composition.rs  trait_inheritence.rs
